<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.password_reset.NewPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="100dp"
        android:layout_marginStart="16dp"
        android:id="@+id/title"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/BudgetLensTitle"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_height="wrap_content"/>
    <!-- color for budgetlens: 1A73E9, font: 32 -->
    <TextView
        android:layout_marginTop="64dp"
        android:id="@+id/infoText"
        android:text="@string/enter_new_password"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="48dp"
        android:id="@+id/newPasswordLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPasswordInput"
            android:layout_width="match_parent"
            android:hint="@string/new_password"
            android:drawableEnd="@drawable/ic_baseline_lock_24"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="24dp"
        android:id="@+id/confirmPasswordLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPasswordLayout"
        android:layout_width="match_parent"

        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordInput"
            android:layout_width="match_parent"
            android:hint="@string/confirm_password"
            android:drawableEnd="@drawable/ic_baseline_lock_24"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:textColor="@color/white"
        android:background="@color/BudgetLensTitle"
        android:layout_marginTop="48dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:text="@string/reset_password"
        android:id="@+id/resetPassword"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/footer"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:paddingStart="0dp"
            android:paddingEnd="16dp"
            android:layout_width="wrap_content"
            android:text="@string/no_account"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/register"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            android:layout_width="wrap_content"
            android:text="@string/register"
            android:textStyle="bold"
            android:textColor="@color/BudgetLensTitle"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/footer"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:paddingStart="0dp"
            android:paddingEnd="16dp"
            android:layout_width="wrap_content"
            android:text="@string/or"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/googleSignin"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            android:layout_width="wrap_content"
            android:text="@string/google_sign_in"
            android:textStyle="bold"
            android:textColor="@color/BudgetLensTitle"
            android:layout_height="wrap_content"
            app:drawableLeftCompat="@drawable/ic_baseline_mail_24"/>
    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.constraintlayout.widget.ConstraintLayout>