<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".receipts.ReceiptsListPageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar"
            app:title="Receipts" />


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/receipts_sort_by_and_filter_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleCentered="true">

        <TextView
            android:id="@+id/receiptsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@+id/receipts_sort_by_and_filter_bar"
            app:layout_constraintTop_toTopOf="@+id/receipts_sort_by_and_filter_bar" />

        <Button
            android:id="@+id/sort_by_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#6750A4"
            android:text="@string/sort_by"
            app:icon="@drawable/sort_48px"
            app:layout_constraintBottom_toBottomOf="@+id/receiptsTextView"
            app:layout_constraintEnd_toEndOf="@+id/receiptsTextView"
            app:layout_constraintStart_toStartOf="@+id/receiptsTextView"
            app:layout_constraintTop_toTopOf="@+id/receiptsTextView" />

        <Button
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#6750A4"
            android:text="@string/filter"
            app:icon="@drawable/filter_alt_48px"
            app:layout_constraintBottom_toBottomOf="@+id/receiptsTextView"
            app:layout_constraintEnd_toEndOf="@+id/receiptsTextView"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintStart_toStartOf="@+id/receiptsTextView"
            app:layout_constraintTop_toTopOf="@+id/receiptsTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receipts_sort_by_and_filter_bar">

        <SearchView
            android:id="@+id/search_bar_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#E7E0EC"
            android:iconifiedByDefault="false"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:queryBackground="@android:color/transparent"
            android:queryHint="@string/search"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="@+id/search_bar"
            app:startIconDrawable="@drawable/search_48px" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/receipts_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/search_bar_text" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:indeterminate="true"
            android:padding="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/empty_view_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="No receipts found. Start scanning!"
            android:visibility="visible" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_nav_menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabut"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="40dp"
        app:backgroundTint="@color/purple"
        app:fabCustomSize="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="40dp"
        app:srcCompat="@drawable/budget"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addReceipts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bottom_navigation"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/appBarLayout2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ScanReceipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:alpha="0.0"
        android:enabled="false"
        android:src="@drawable/ic_baseline_add_a_photo_24"
        app:layout_constraintBottom_toTopOf="@+id/addReceipts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout2"
        app:layout_constraintVertical_bias="1.0"
        app:title="Home" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createManual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:alpha="0.0"
        android:enabled="false"
        android:src="@drawable/ic_baseline_post_add_24"
        app:layout_constraintBottom_toTopOf="@+id/ScanReceipt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout2"
        app:layout_constraintVertical_bias="1.0"
        app:title="Home" />
</androidx.constraintlayout.widget.ConstraintLayout>