...
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/receipts"
        android:icon="@drawable/ic_baseline_receipt_long_24"
        android:title="@string/receipts" />

    <item
        android:id="@+id/budget"
        android:icon="@drawable/ic_dashboard_black_24dp"
...
    <item
        android:id="@+id/friends"
        android:icon="?attr/actionModeShareDrawable"
        android:title="@string/friends" />

    <item
        android:id="@+id/items"
        android:icon="@drawable/ic_baseline_shopping_bag_24"
        android:title="@string/items" />

</menu>
